tests/valid/compliant-app-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: compliant-app-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: compliant-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
  egress:
    - to: []
