tests/valid/secure-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-nginx-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secure-nginx-app
  template:
    metadata:
      labels:
        app: secure-nginx-app
    spec:
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.21
          securityContext:
            runAsUser: 1001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "400m"
              memory: "512Mi"
      imagePullSecrets:
        - name: regcred
